Data analysis: make sure <select> is visible, no scrollbar for regression equation
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@57818 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/main/resources/org/geogebra/web/resources/css/web-styles.less
+++ b/web/src/main/resources/org/geogebra/web/resources/css/web-styles.less
@@ -3769,6 +3769,11 @@
 		height: 100%;
 	}
 	
+	.daEquationScrollPane{
+		padding:5px;
+		max-width:500px;
+	}
+	
 	.daOptionsTabPanel {
 		width: 505px;
 	}
